--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,13 @@
+
+  @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,100&display=swap');
+  *{
+    box-sizing: border-box;
+    margin:0;
+
+  }
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Outfit', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -10,4 +17,78 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+p {
+  font-size: 1.6rem;
+}
+h1{
+  font-size: 6rem;
+}
+.app {
+  width:100%;
+  height:100vh;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.189);
+  color:#fff;
+}
+.app:before{
+  content:"";
+  background: url('./assets/weather\ app.jpg')  no-repeat center center/cover  ;
+  z-index: -1;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+.container {
+  max-width: 700px;
+  height: 500px;
+  top:10%;
+  margin: auto;
+  padding: 0 1rem;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  justify-content: space-between;
+}
+.app .top{
+  width:100%;
+  margin: 1rem auto;
+}
+.app .description{
+  position: relative;
+  right:-90%;
+  transform: rotate(269deg);
+  transform-origin: 0 0;
+}
+.app .search{
+  text-align: center;
+  padding: 1rem;
+  /* border: 2px solid red; */
+}
+.app .search input{
+  padding: 0.8rem 1.5rem;
+  border-radius: 25px;
+  border: 2px solid rgba(255,255,255,0.8);
+  background: rgba(255,255,255, 0.2);
+  font-size: 1.2rem;
+  color:#f8f8f8;
+}
+::placeholder{
+  color:#f8f8f8;
+}
+.app .bottom{
+  border: 2px solid red;
+  display: flex;
+  text-align: center;
+  justify-content: space-evenly;
+  width: 100%;
+  background-color: rgba(255,255,255, 0.2);
+  margin: 1rem auto;
+  padding: 1rem;
+  border-radius: 12px;
+}
+.bold{
+  font-weight: 700;
 }
